test/visibility/import/edgeCases/anotherMultipleDef.good
anotherMultipleDef.chpl:1: error: symbol A is multiply defined
anotherMultipleDef.chpl:7: note: also defined here
